--- a/assets/package.json
+++ b/assets/package.json
@@ -14,6 +14,9 @@
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.0",
     "copy-webpack-plugin": "^4.0.1",
+    "css-loader": "^0.28.5",
+    "extract-text-webpack-plugin": "^3.0.0",
+    "style-loader": "^0.18.2",
     "webpack": "^3.5.5"
   }
 }
