--- a/assets/package.json
+++ b/assets/package.json
@@ -16,6 +16,8 @@
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.5",
     "extract-text-webpack-plugin": "^3.0.0",
+    "node-sass": "^4.5.3",
+    "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
     "webpack": "^3.5.5"
   }
